WebKit Bugzilla
New
Browse
Search+
Log In
×
Sign in with GitHub
or
Remember my login
Create Account
·
Forgot Password
Forgotten password account recovery
RESOLVED FIXED
31570
scrollbar fixes for wxWebKit
https://bugs.webkit.org/show_bug.cgi?id=31570
Summary
scrollbar fixes for wxWebKit
Robin Dunn
Reported
2009-11-16 17:14:32 PST
Make sure wx scrollbar drawing code factors in transforms when switching backends, fix calcs for scrollbar length, and tweak the Mac scrollbar tracking rects.
Attachments
patch file
(8.79 KB, patch)
2009-11-16 17:16 PST
,
Robin Dunn
kevino
: review+
Details
Formatted Diff
Diff
View All
Add attachment
proposed patch, testcase, etc.
Robin Dunn
Comment 1
2009-11-16 17:16:00 PST
Created
attachment 43332
[details]
patch file
Kevin Ollivier
Comment 2
2009-11-16 21:51:13 PST
Landed in
r51065
, thanks!
Note
You need to
log in
before you can comment on or make changes to this bug.
Top of Page
Format For Printing
XML
Clone This Bug