Reviewed by Kevin Ollivier.

Make sure wx scrollbar drawing code factors in transforms when switching backends,
fix calcs for scrollbar length, and tweak the Mac scrollbar tracking rects.

https://bugs.webkit.org/show_bug.cgi?id=31570


Canonical link: https://commits.webkit.org/42494@main
git-svn-id: https://svn.webkit.org/repository/webkit/trunk@51065 268f45cc-cd09-0410-ab3c-d52691b4dbfc